homeautomation/zwavejs-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: zwavejs
    app.kubernetes.io/instance: homeautomation
  name: zwavejs
  namespace: homeautomation
spec:
  host: zwavejs-homeautomation.apps.snolab.csfreak.com
  port:
    targetPort: zwavejs-http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: zwavejs
    weight: 100
  wildcardPolicy: None
